--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,10 +3,12 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 
+
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.1"
     apply plugin: "androidx.navigation.safeargs.kotlin"
+    apply plugin: "kotlin-kapt"
 
     defaultConfig {
         applicationId "com.ubaya.advweek4"
@@ -24,6 +26,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    buildFeatures {
+        dataBinding true
+    }
+
 }
 
 dependencies {
@@ -44,4 +50,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation "io.reactivex.rxjava3:rxjava:3.0.11"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation "io.reactivex.rxjava3:rxkotlin:3.0.1"
 }
